--- a/src/index.css
+++ b/src/index.css
@@ -1,106 +1,278 @@
-h2{
-	text-align:center; 
+h2 {
+	text-align: center;
 	padding-top: 3%;
-	color:white;
-	text-shadow:2px 1px;
-	font-size:40px;
-	font-family:'Playfair Display', serif;
+	color: white;
+	text-shadow: 2px 1px;
+	font-size: 40px;
+	font-family: 'Playfair Display', serif;
 }
-body{
-	background:#B09DB9;
+
+body {
+	background: rgb(239, 238, 238);
+	color: #777;
 }
-.one{
-	padding-left:4%;
-	text-align:center;
-	font-size:30px;
-	color:#FF1694;
-	text-shadow:2px 1px;
+
+* {
+	box-sizing: border-box
+}
+
+.one {
+	padding-left: 4%;
+	text-align: center;
+	font-size: 30px;
+	color: #FF1694;
+	text-shadow: 2px 1px;
 	font-family: 'Philosopher', sans-serif;
-	
+
 }
-.two{
-	padding-left:4%;
-	text-align:center;
-	font-size:30px;
-	color:#FF1694;
-	text-shadow:2px 1px;
+
+.two {
+	padding-left: 4%;
+	text-align: center;
+	font-size: 30px;
+	color: #FF1694;
+	text-shadow: 2px 1px;
 	font-family: 'Philosopher', sans-serif;
-	
-	
+
+
 }
-.three{
-	padding-left:4%;
-	text-align:center;
-	font-size:30px;
-	color:#FF1694;
-	text-shadow:2px 1px;
+
+.three {
+	padding-left: 4%;
+	text-align: center;
+	font-size: 30px;
+	color: #FF1694;
+	text-shadow: 2px 1px;
 	font-family: 'Philosopher', sans-serif;
 	;
 }
+
 .fa {
-  padding: 20px;
-  font-size: 70px;
-  width: 70px;
-  text-align:center;
-  text-decoration: none;
-  margin: 5px 2px;
+	padding: 20px;
+	font-size: 70px;
+	width: 70px;
+	text-align: center;
+	text-decoration: none;
+	margin: 5px 2px;
 }
 
 .fa:hover {
-    opacity: 0.7;
+	opacity: 0.7;
 }
 
 .fa-facebook {
-  background:white;
-  color:#FF1694;
+	background: white;
+	color: #FF1694;
 }
 
 .fa-twitter {
-  background:white ;
-  color: #FF1694;
+	background: white;
+	color: #FF1694;
 }
+
 .fa-linkedin {
-  background:white;
-  color:#FF1694;
+	background: white;
+	color: #FF1694;
 }
 
 .fa-youtube {
-  background: white;
-  color:#FF1694 ;
+	background: white;
+	color: #FF1694;
 }
 
 .fa-instagram {
-  background:white ;
-  color: #FF1694;
+	background: white;
+	color: #FF1694;
 }
-.jumbotron{
-	background:#B09DB9;
-	text-align:center;
-	color:white;
-	font-size:30px;
-	text-shadow:2px 2px black;
+
+.jumbotron {
+	background: #B09DB9;
+	text-align: center;
+	color: white;
+	font-size: 30px;
+	text-shadow: 2px 2px black;
 }
-.bg-dark{
-	background:rgba(0,0,0)!important;
+
+.bg-dark {
+	background: rgba(0, 0, 0) !important;
 }
-#mark{
-  color:white;
-  text-align: center;
-  font-family: 'Berkshire Swash', cursive;
-  font-size:30px;
-  color: #FF1694;
+
+#mark {
+	color: white;
+	text-align: center;
+	font-family: 'Berkshire Swash', cursive;
+	font-size: 30px;
+	color: #FF1694;
 }
-.navbar-brand{
+
+.navbar-brand {
 	font-family: 'Lobster Two', cursive;
-	font-size:30px;
+	font-size: 30px;
 }
-.nav-link{
+
+.nav-link {
 	font-family: 'Old Standard TT', serif;
 }
-.one:hover{
-	opacity:0.7;
+
+.one:hover {
+	opacity: 0.7;
 }
-#contact{
-font-family: 'Berkshire Swash', cursive;
-font-size:70px;
+
+#contact {
+	font-family: 'Berkshire Swash', cursive;
+	font-size: 70px;
+}
+
+/************************************************************************************
+************************************************************************************/
+
+input[type=text],
+input[type=password] {
+	width: 100%;
+	padding: 15px;
+	margin: 5px 0 22px 0;
+	display: inline-block;
+	border: none;
+	background: #f1f1f1;
+}
+
+input[type=text]:focus,
+input[type=password]:focus {
+	background-color: #ddd;
+	outline: none;
+}
+
+hr {
+	border: 1px solid #f1f1f1;
+	margin-bottom: 25px;
+}
+
+/* Set a style for all buttons */
+button {
+	background-color: #008800;
+	color: white;
+	padding: 14px 20px;
+	margin: 8px 0;
+	border: none;
+	cursor: pointer;
+	width: 100%;
+	opacity: 0.9;
+}
+
+button:hover {
+	opacity: 1;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+	padding: 14px 20px;
+	background-color: #880000;
+}
+
+/* Float cancel and signup buttons and add an equal width */
+.cancelbtn,
+.signupbtn {
+	float: left;
+	width: 50%;
+}
+
+/* Add padding to container elements */
+.container {
+	padding: 16px;
+}
+
+/* Clear floats */
+.clearfix::after {
+	content: "";
+	clear: both;
+	display: table;
+}
+
+/* Change styles for cancel button and signup button on extra small screens */
+@media screen and (max-width: 300px) {
+
+	.cancelbtn,
+	.signupbtn {
+		width: 100%;
+	}
+}
+
+h1,
+label {
+	color: #777;
+}
+
+#one {
+	color: #777;
+}
+
+
+#contact {
+	color: #777;
+	text-align: center;
+}
+
+
+input[type=text],
+select,
+textarea {
+	width: 100%;
+	padding: 12px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+	margin-top: 6px;
+	margin-bottom: 16px;
+	resize: vertical;
+}
+
+input[type=submit] {
+	background-color: #4CAF50;
+	color: white;
+	padding: 12px 20px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+input[type=submit]:hover {
+	background-color: #45a049;
+}
+
+.container {
+	border-radius: 5px;
+	background-color: #f2f2f2;
+	padding: 20px;
+}
+
+input[type=text],
+select,
+textarea {
+	width: 100%;
+	padding: 12px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+	margin-top: 6px;
+	margin-bottom: 16px;
+	resize: vertical;
+}
+
+input[type=submit] {
+	background-color: #4CAF50;
+	color: white;
+	padding: 12px 20px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+input[type=submit]:hover {
+	background-color: #45a049;
+}
+
+.container {
+	border-radius: 5px;
+	background-color: #f2f2f2;
+	padding: 20px;
 }
